# build123d_ease

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-code-checks.yml  run-unit-tests.yml
build123d_ease/: __init__.py  _rounded_box.py  align.py  ci_show.py  faces.py  fetch_axes.py  fetch_faces.py  shapes3d.py
examples/: __init__.py  rounded_box_example.py
tests/: test_demo.py  test_fetch_axes.py  test_fetch_faces.py  test_rotations.py
