[project]
name = "build123d_ease"
version = "0.1.0"
description = "Extensions, tools, and shortcuts to make modelling with Build123d easier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build123d",
    "ocp_vscode",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"./tests/**/*.py" = [
    "S101", # Allow asserts.
]
