[project]
name = "build123d-ease"
version = "0.2.1"
description = "Extensions, tools, and shortcuts to make modelling with Build123d easier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build123d",
    "ocp_vscode",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"


[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "D203", # Fix warning.
    "D213", # Fix warning.
    "COM812", # Fix warning.
    "ISC001", # Fix warning.
]

[tool.ruff.lint.per-file-ignores]
"./tests/**/*.py" = [
    "S101", # Allow asserts.
]
